@@ -1,8 +1,9 @@
 // Add compiler arguments to access jdeps module
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs.addAll([
-            "--add-modules", "jdk.jdeps",
-            "--add-exports", "jdk.jdeps/com.sun.tools.jdeps=ALL-UNNAMED",
+            "--add-modules=jdk.jdeps",
+            "--add-exports=jdk.jdeps/com.sun.tools.jdeps=ALL-UNNAMED",
+            "--add-opens=jdk.jdeps/com.sun.tools.jdeps=ALL-UNNAMED", // use reflection (com.sun.tools.jdeps.DepsAnalyzer.archives)
     ])
 }
 
